2010-10-13  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/44180
	* gcc.target/i386/pr44180.c: New.

2010-10-13  Jason Merrill  <jason@redhat.com>

	* g++.dg/template/canon-type-8.C: New.

2010-10-13  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.c-torture/execute/20101013-1.c: New test.

2010-10-13  Richard Guenther  <rguenther@suse.de>

	PR objc/45878
	* objc.dg/pr45878.m: New testcase.

2010-10-13  Kai Tietz  <kai.tietz@onevision.com>

	* gcc.dg/format/dfp-scanf-1.c: Disable for *-*-mingw* targets.
	* gcc.dg/format/dfp-printf-1.c: Likewise.
	* gcc.dg/format/ms_unnamed-1.c: Adjust linenumber for warning.

2010-10-13  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45788
	* g++.dg/pr45788.C: New testcase.

2010-10-13  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45970
	* gcc.dg/tree-ssa/ssa-dse-13.c: New testcase.

2010-10-13  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45982
	* gcc.dg/torture/pr45982.c: New testcase.
	* gcc.dg/tree-ssa/pr24287.c: Adjust.
	* gcc.dg/tree-ssa/pta-callused.c: Likewise.
	* gcc.dg/torture/pr39074-2.c: Likewise.

2010-10-13  Richard Guenther  <rguenther@suse.de>

	PR middle-end/45874
	* g++.dg/torture/pr45874.C: New testcase.

2010-10-13  Iain Sandoe  <iains@gcc.gnu.org>

	* objc.dg/attributes/method-attribute-1.m: Update to respond
	to implemented method attributes..
	* objc.dg/attributes/method-attribute-2.m: Likewise.
	* objc.dg/attributes/method-attribute-3.m: Likewise.
	* obj-c++.dg/attributes/method-attribute-1.mm: Likewise.
	* obj-c++.dg/attributes/method-attribute-2.mm: Likewise.
	* obj-c++.dg/attributes/method-attribute-3.mm: Likewise.

2010-10-13  Nicola Pero  <nicola.pero@meta-innovation.com>

	PR libobjc/23214
	* objc.dg/pr23214.m: New.

2010-10-12  Michael Eager  <eager@eagercon.com>

	PR testsuite/45856
	* gcc.c-torture/execute/cmpsi-2.c: Use int, not long.
	* gcc.c-torture/execute/cmpsf-1.c: Use float, regen correct table.

2010-10-12  Jakub Jelinek  <jakub@redhat.com>
